# lspp-mcp-server

./: .gitattributes  .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: tests.yml
skills/lspp-postprocess/: SKILL.md
skills/lspp-postprocess/agents/: openai.yaml
skills/lspp-postprocess/references/: options.md  troubleshooting.md  workflows.md
src/lspp_mcp/: __init__.py  casegen_worker.py  colormaps.py  config.py  runner.py  server.py  templates.py  validators.py  variable_maps.py
src/lspp_mcp/cfile_templates/: export_d3plot_contour.cfile.j2  export_d3plot_contour_frames.cfile.j2  extract_ascii_curve.cfile.j2  extract_binout_curve.cfile.j2  extract_d3plot_node_history.cfile.j2  preview_keyword_model.cfile.j2
src/lspp_mcp/tools/: __init__.py  _common.py  ale.py  ascii_curves.py  assembly.py  batch.py  binout.py  casegen.py  d3plot.py  keyword.py  preprocess.py  results.py  sale.py  solver.py
tests/: test_ale.py  test_assembly.py  test_binout.py  test_casegen.py  test_colormaps.py  test_config.py  test_keyword.py  test_preprocess.py  test_results.py  test_runner_mock.py  test_sale.py  test_solver.py  test_templates.py  test_validators.py
