[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lspp-mcp-server"
version = "0.1.0"
description = "Safe MCP tools for LS-PrePost command-file based LS-DYNA post-processing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "lspp-mcp-server contributors" }
]
dependencies = [
  "mcp>=1.0.0",
  "Jinja2>=3.1",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
lspp-mcp-server = "lspp_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lspp_mcp = ["cfile_templates/*.j2"]
